k8s/apps/forgejo/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  labels: &labels
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: forgejo-server
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:

      nodeSelector:
        kubernetes.io/hostname: main

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
        - name: ssh-auth
          hostPath:
            path: /var/lib/forgejo/.ssh/

      containers:
        - name: forgejo
          image: codeberg.org/forgejo/forgejo
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /data
              name: data
            - name: ssh-auth
              mountPath: /data/git/.ssh/
          ports:
            - containerPort: 22
              name: ssh
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
