k8s/apps/forgejo/manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  labels: &labels
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: forgejo-server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      targetPort: ssh



---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-extern
  labels: &labels
    app.kubernetes.io/name: forgejo
    app.kubernetes.io/component: forgejo-server
spec:
  selector: *labels
  type: NodePort
  ports:
    - name: ssh
      port: 22
      nodePort: 30022
      targetPort: ssh
