k8s/apps/forgejo/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 1g
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-git.ftsell.de
      hosts:
        - git.ftsell.de
  rules:
    - host: git.ftsell.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  name: http
